--- a/public/index.html
+++ b/public/index.html
@@ -8,6 +8,7 @@
     <title>Made by Bambi</title>
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto:100,300,400,500,700,900" />
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/@mdi/font@latest/css/materialdesignicons.min.css" />
+    <!-- <link href="https://fonts.cdnfonts.com/css/bahnschrift" rel="stylesheet"> -->
   </head>
   <body>
     <noscript>
