--- a/public/TwitterFeed.htm
+++ b/public/TwitterFeed.htm
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   </head>
   <body>
-    <a class="twitter-timeline" href="https://twitter.com/Bambilijas?ref_src=twsrc%5Etfw">Tweets by Bambilijas</a>
+    <a class="twitter-timeline" href="https://twitter.com/Bambilijas?ref_src=twsrc%5Etfw">Loading twitter...</a>
     <script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
   </body>
 </html>
